Fix alignment issues in the CV page

--- a/css/cv.css
+++ b/css/cv.css
@@ -26,7 +26,7 @@
 }
 
 .cv-time {
-    width: 100px;
+    width: 50px;
     text-align: right;
     flex: 0 0 auto;
     justify-content: flex-end;
