--- a/css/default.css
+++ b/css/default.css
@@ -67,6 +67,7 @@ a {
 
 .content-title {
     color: #140D4F;
+    text-align: center;
 }
 
 .content-subtitle {
